@startuml

hide empty members
skinparam shadowing    false
skinparam packageStyle rect


class "Game" as game {
    +score()
}


interface "IFrame" as iframe {
    +getScore()
    +getPins()
    #getPinsOf(int $ball)
    --
    +isStrike()
    +isSpare()
}

class "Frame" as frame {
    +calc(IFrame $previous)
}
class "FrameWithBonus" as frame_with_bonus {
    +calc(IFrame $previous)
}

class "Ball" as ball {
    +getPins() : int
}


game   o--  iframe
iframe <|-- frame
iframe <|-- frame_with_bonus
iframe o--  ball


@enduml
